# ragu

./: Cargo.toml  README.md  _typos.toml  justfile  rust-toolchain.toml  rustfmt.toml
.claude/book-review/: grammar.md  math.md  prose.md
.claude/code-review/: documentation.md
.github/workflows/: bench-alert.yml  debug.yml  fv.yml  rust.yml
book/: FIXME.md  README.md  book.toml  custom.css  macros.txt
book/src/: Introduction.md  SUMMARY.md  introduction.md
fv/crates/lean_extraction/: Cargo.toml
fv/crates/lean_extraction/src/: codegen.rs  driver.rs  expr.rs  instance.rs  main.rs
fv/crates/lean_extraction/src/instances/: mod.rs  point_add_incomplete.rs  point_alloc.rs  point_double.rs  point_neg.rs
qa/crates/lean_extraction/: Cargo.toml
qa/crates/lean_extraction/src/: codegen.rs  driver.rs  expr.rs  instance.rs  linexp.rs  main.rs
qa/crates/lean_extraction/src/instances/: boolean_alloc.rs  boolean_and.rs  boolean_conditional_enforce_equal.rs  boolean_conditional_select.rs  boolean_multipack.rs  boolean_not.rs  core_alloc_mul.rs  element_alloc.rs  element_alloc_square.rs  element_div_nonzero.rs  element_enforce_root_of_unity.rs  element_enforce_zero.rs  element_fold.rs  element_invert.rs  element_invert_with.rs  element_is_equal.rs  element_is_zero.rs  element_mul.rs  element_negate.rs  element_square.rs  element_sub.rs  mod.rs  point_add_incomplete.rs  point_alloc.rs  point_conditional_endo.rs  point_conditional_negate.rs  point_constant.rs  point_double.rs  point_double_and_add_incomplete.rs  point_endo.rs  point_negate.rs
supply-chain/: config.toml
(+379 files in other folders)
