[package]
name = "lean_extraction"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ragu_core = { path = "../../../crates/ragu_core", version = "0.0.0" }
ragu_arithmetic = { path = "../../../crates/ragu_arithmetic", version = "0.0.0" }
ragu_primitives = { path = "../../../crates/ragu_primitives", version = "0.0.0" }
ragu_pasta = { path = "../../../crates/ragu_pasta", version = "0.0.0" }
ff = { workspace = true }
group = { workspace = true }
